--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://i.etsystatic.com/isla/29c813/52642632/isla_500x500.52642632_11lyy4w2.jpg?version=0" />
     <script src="https://www.paypal.com/sdk/js?client-id=ARPtQ_1YGNhr4JbU3IdGFPbyG35Vu7kNBVMARZOUaDhsItUHlEHpeoZhoPrLQRHgoDCNeJ7NYgwkIpou"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
